PROJECT(xqueue)
cmake_minimum_required(VERSION 2.8)
SET(SRC_DIR ./)
SET(SRC_LIST 
	xqueue.c
)

INCLUDE_DIRECTORIES(./)
IF(APPLE)
set(CMAKE_SHARED_LINKER_FLAGS "-undefined dynamic_lookup")
ENDIF(APPLE)
ADD_LIBRARY(xqueue SHARED ${SRC_LIST})
SET_TARGET_PROPERTIES(xqueue PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(xqueue PROPERTIES SUFFIX .so)

